--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.0.0",
+    "@fingerprintjs/fingerprintjs": "^4.1.0",
     "astro": "^3.1.0",
+    "mixpanel-browser": "^2.47.0",
     "tailwindcss": "^3.3.3"
   }
 }
